# MiWifi-CR660x-Unlocker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
html/: command.json  index.html
main/: CMakeLists.txt  Kconfig.projbuild  http.c  http.h  main.c  wifi.c  wifi.h
